CUsersscreenpipe-windowsAppDataLocalTempbuild_output.txt
warning: output filename collision.
The lib target `terminator` in package `terminator-py-bindings v0.16.10 (C:\Users\screenpipe-windows\terminator\bindings\python)` has the same output filename as the bin target `terminator` in package `terminator-cli v0.16.10 (C:\Users\screenpipe-windows\terminator\terminator-cli)`.
Colliding filename is: C:\Users\screenpipe-windows\terminator\target\release\deps\terminator.pdb
The targets should have unique names.
Consider changing their names to be unique or compiling them separately.
This may become a hard error in the future; see <https://github.com/rust-lang/cargo/issues/6313>.
warning: output filename collision.
The lib target `terminator` in package `terminator-py-bindings v0.16.10 (C:\Users\screenpipe-windows\terminator\bindings\python)` has the same output filename as the bin target `terminator` in package `terminator-cli v0.16.10 (C:\Users\screenpipe-windows\terminator\terminator-cli)`.
Colliding filename is: C:\Users\screenpipe-windows\terminator\target\release\terminator.pdb
The targets should have unique names.
Consider changing their names to be unique or compiling them separately.
This may become a hard error in the future; see <https://github.com/rust-lang/cargo/issues/6313>.
warning: output filename collision.
The lib target `terminator` in package `terminator-rs v0.16.10 (C:\Users\screenpipe-windows\terminator\terminator)` has the same output filename as the lib target `terminator` in package `terminator-py-bindings v0.16.10 (C:\Users\screenpipe-windows\terminator\bindings\python)`.
Colliding filename is: C:\Users\screenpipe-windows\terminator\target\release\libterminator.rlib
The targets should have unique names.
Consider changing their names to be unique or compiling them separately.
This may become a hard error in the future; see <https://github.com/rust-lang/cargo/issues/6313>.
   Compiling terminator-rs v0.16.10 (C:\Users\screenpipe-windows\terminator\terminator)
   Compiling terminator-workflow-recorder v0.16.10 (C:\Users\screenpipe-windows\terminator\terminator-workflow-recorder)
   Compiling terminator-py-bindings v0.16.10 (C:\Users\screenpipe-windows\terminator\bindings\python)
   Compiling terminator-node-bindings v0.16.10 (C:\Users\screenpipe-windows\terminator\bindings\nodejs)
   Compiling terminator-mcp-agent v0.16.10 (C:\Users\screenpipe-windows\terminator\terminator-mcp-agent)
error[E0425]: cannot find value `Ctrl` in this scope
    --> terminator-mcp-agent\src\prompt.rs:1041:26
     |
1041 | await desktop.pressKey('{Ctrl}c');      // System-wide key press (curly braces format)
     |                          ^^^^ not found in this scope

error[E0425]: cannot find value `Win` in this scope
    --> terminator-mcp-agent\src\prompt.rs:1042:26
     |
1042 | await desktop.pressKey('{Win}r');       // Open Run dialog
     |                          ^^^ not found in this scope

error[E0425]: cannot find value `Alt` in this scope
    --> terminator-mcp-agent\src\prompt.rs:1043:26
     |
1043 | await desktop.pressKey('{Alt}{Tab}');   // Switch windows
     |                          ^^^ not found in this scope
     |
help: consider importing this unit variant
     |
1    + use rdev::Key::Alt;
     |

error[E0425]: cannot find value `Tab` in this scope
    --> terminator-mcp-agent\src\prompt.rs:1043:31
     |
1043 | await desktop.pressKey('{Alt}{Tab}');   // Switch windows
     |                               ^^^ not found in this scope
     |
help: consider importing one of these unit variants
     |
1    + use rdev::Key::Tab;
     |
1    + use serde_json::ser::CharEscape::Tab;
     |

error[E0425]: cannot find value `Enter` in this scope
    --> terminator-mcp-agent\src\prompt.rs:1137:54
     |
1137 | *   Use curly brace format for key names: `{Tab}`, `{Enter}`, `{Ctrl}c` (more reliable than plain 'Tab')
     |                                                      ^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
error: could not compile `terminator-mcp-agent` (lib) due to 5 previous errors
